--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon May 21 20:38:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/xm_internal.c: Allow xenXMDomainDefineXML to overwrite
+	an existing guest config to match semantics of XenD and QEMU
+	drivers. Patch from Hugh Brock.
+
 Fri May 18 14:36:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/conf.c, qemud/internal.h, qemud/qemud.c: Save VM output
