--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue May 29 15:54:17 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/virsh.c src/xen_internal.c src/xend_internal.c: memory leaks
+	  fixed by a patch from Masayuki Sunou
+
 Wed May 23 16:07:00 BST 2007 Richard W.M. Jones  <rjones@redhat.com>
 
 	* src/virsh.c: Add attach-device and detach-device commands to
