--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jun  1 16:02:12 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/xml.c: added a comment about (type ioemu) not needed
+	  for interfaces on xen 3.1 as pointed by Saori Fukuta
+
 Tue May 29 15:56:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* python/generator.py, python/libvir.c, python/libvir.py:
