--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jun  5 22:47:09 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/xen_internal.c: fix from Hugh Brock to allow compiling
+	  with -Werror after the previous patch
+
 Tue Jun  5 14:03:38 CEST 2007 Daniel Veillard <veillard@redhat.com>
 
 	* include/libvirt/libvirt.h include/libvirt/libvirt.h.in
