--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jun  7 10:47:30 EST 2007 Daniel Berrange <berrange@redhat.com>
+
+	* autobuild.sh: Ensure build fails if tests fail
+
 Thu Jun  7 10:08:30 EST 2007 Daniel Berrange <berrange@redhat.com>
 
 	* src/xm_internal.c: Fix boot device XML -> config conversion
