--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jun  8 11:35:55 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* po/*: new merge of localization strings
+
 Thu Jun  7 14:20:30 EST 2007 Daniel Berrange <berrange@redhat.com>
 
 	* src/xm_internal.c: Fixed handling of bridge devices
