--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Mon Jun 11 14:10:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
+
+	* libvirt.spec.in: BuildRequires gnutls-devel and
+	  set the remote PIDfile when configuring.
+	* qemud/Makefile.am: Distribute the Perl scripts.
+	* qemud/qemud.c: Only use QEMUD_DEBUG when ENABLE_DEBUG
+	  is defined.
+
+Mon Jun 11 13:25:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
+
+	* RENAMES: Suggested list of file renames.
+
 Mon Jun 11 13:24:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* docs/examples/.cvsignore: Ignore .deps and .libs subdirectories.
